--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "bezhansalleh/filament-shield": "^3.3",
         "filament/filament": "^3.2",
         "joaopaulolndev/filament-edit-profile": "^1.0",
+        "joshembling/image-optimizer": "^1.4",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "leandrocfe/filament-apex-charts": "^3.1",
