--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "leandrocfe/filament-apex-charts": "^3.1",
-        "pxlrbt/filament-excel": "^2.3"
+        "pxlrbt/filament-excel": "^2.3",
+        "rmsramos/activitylog": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
