--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "leandrocfe/filament-apex-charts": "^3.1",
+        "leandrocfe/filament-ptbr-form-fields": "^3.0",
         "pxlrbt/filament-excel": "^2.3",
         "rmsramos/activitylog": "^1.0"
     },
