--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,8 @@
-name: Package
-on: [push]
+on:
+  push:
+    branches:
+      - main
+name: 🚀 Deploy composer test
 jobs:
   package:
     runs-on: ubuntu-latest
@@ -7,7 +10,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: php-actions/composer@v6
       with:
-        php_version: "8.2"
+        php_version: "11.23.5"
         dev: no
         args: --optimize-autoloader
     - run: |
