--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -7,6 +7,9 @@ cmds = [
     "cp /assets/worker-*.conf /etc/supervisor/conf.d/",
     "cp /assets/supervisord.conf /etc/supervisord.conf",
     "chmod +x /assets/start.sh",
+    "chmod -R 775 /app/storage /app/bootstrap/cache",
+    "chown -R www-data:www-data /app/storage /app/bootstrap/cache",
+    "composer install --optimize-autoloader --no-dev",
     "..."
 ]
 
@@ -143,17 +146,9 @@ http {
 
         charset utf-8;
 
-        $if(IS_LARAVEL) (
-            location / {
-                try_files $uri $uri/ /index.php?$query_string;
-            }
-        ) else ()
-
-        $if(NIXPACKS_PHP_FALLBACK_PATH) (
-          location / {
-            try_files $uri $uri/ ${NIXPACKS_PHP_FALLBACK_PATH}?$query_string;
-          }
-        ) else ()
+        location / {
+            try_files $uri $uri/ ${NIXPACKS_PHP_FALLBACK_PATH:-/index.php}?$query_string;
+        }
 
         location = /favicon.ico { access_log off; log_not_found off; }
         location = /robots.txt  { access_log off; log_not_found off; }
@@ -164,6 +159,9 @@ http {
 
         location ~ \.php$ {
             fastcgi_pass 127.0.0.1:9000;
+            fastcgi_buffers 16 16k;
+            fastcgi_buffer_size 32k;
+            fastcgi_intercept_errors off;
             fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
             include $!{nginx}/conf/fastcgi_params;
             include $!{nginx}/conf/fastcgi.conf;
