--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,12 @@
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.0",
         "bezhansalleh/filament-shield": "^3.3",
+        "dotswan/filament-laravel-pulse": "^1.1",
         "filament/filament": "^3.2",
         "joaopaulolndev/filament-edit-profile": "^1.0",
         "joshembling/image-optimizer": "^1.4",
         "laravel/framework": "^11.31",
+        "laravel/pulse": "^1.4",
         "laravel/tinker": "^2.9",
         "league/flysystem-aws-s3-v3": "^3.29",
         "leandrocfe/filament-apex-charts": "^3.1",
