--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "leandrocfe/filament-apex-charts": "^3.1",
         "leandrocfe/filament-ptbr-form-fields": "^3.0",
         "livewire/livewire": "^3.5",
+        "mallardduck/blade-lucide-icons": "^1.23",
         "predis/predis": "^2.3",
         "pxlrbt/filament-excel": "^2.3",
         "rmsramos/activitylog": "^1.0"
